2006-08-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc: Updated with Windows tests (merged
	rev. 612:613 from itpp-3-10 branch).

	* itpp/base/parser.cpp: Minor fix of uninitialised bool variable.

	* itpp/base/itmisc.h, itpp/base/random.h: Replaced deprecated
	hypot(x, y) function with std::sqrt(x*x + y*y) calculation. BTW,
	macro definition M_2PI replaced with a global constant m_2pi.

	* itpp/base/mat.cpp, itpp/base/mat.h: Fixed a minor problem of
	uninitialised matrix elements, when parsing values from a string
	literal.

	* itpp/signal/sigfun.cpp: Fixed bug [1538210], caused by
	uninitialised variable `m2' used for covariance calculation.
	Thanks to Max Moorkamp for reporting this bug.

	* itpp/comm/modulator.cpp, itpp/comm/modulator.h,
	tests/modulator_test.ref: Further cosmetic changes and minor fixes
	in QPSK, PSK and QAM modulator classes. Use the new trunc_log()
	function when calculating log-likelihood ratio. Reference data for
	test program updated accordingly.

2006-08-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/modulator.cpp, itpp/comm/modulator.h: Minor fixes in
	BPSK and PAM modulator classes. Now use the new trunc_log()
	function when calculating log-likelihood ratio.

2006-08-10  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/rec_syst_conv_code.cpp: Now use the new trunc_exp()
	and trunc_log() functions instead of macros.

2006-08-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/modulator.cpp, itpp/comm/modulator.h: Modulator_1d and
	Modulator_2d classes revised with respect to bug [1456235]. The
	precision problems for high SNR have been solved by using the
	trunc_log() function recently defined in "logexpfunc.h" file.
	Thanks to Erik for his help in solving this problem. This fix
	closes the bug report [1456235].

	* itpp/base/logexpfunc.h: Added special truncated versions of
	log() and exp() functions, which might be used instead of the