@@ -1,6 +1,7 @@
 ========================================================
                Test of ND (MIMO) Modulators             
 ========================================================
+---------- LLR calculation unit -----------------
 LLR_calc_unit table properties:
 The granularity in the LLR representation is 0.000244141
 The LLR scale factor is 4096
@@ -8,6 +9,7 @@ The largest LLR that can be represented is 131072
 The table resolution is 0.03125
 The number of entries in the table is 300
 The tables truncates at the LLR value 9.375
+-------------------------------------------------
 
 ================== ND-U2PAM =========== 
 [0 1 1 0 1]
