@@ -1,3 +1,9 @@
+2006-08-12  Erik G. Larsson <erik_g_larsson@users.sourceforge.net>
+
+	* itpp/comm/modulator_nd.*, itpp/comm/llr.*,
+	tests/modulator_nd_test.ref, tests/llr_test.ref: Documentation
+	updates and cosmetic changes.
+
 2006-08-11  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* doc/local/verification.doc: Updated with Windows tests (merged
